--- a/src/Components/Homepage/mission_vision/missionvision.module.css
+++ b/src/Components/Homepage/mission_vision/missionvision.module.css
@@ -1,216 +1,119 @@
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-
+html{
+    font-family:'Times New Roman', Times, serif;
+}
 .container {
-    padding: 4vmax;
     display: grid;
-    /* border: solid green; */
-    grid-template-areas:
-        'area1 area2',
-        'area3 area4';
-    grid-gap: 0.1vw;
-}
-
-.container #missionlogo {
-    /* grid-area: area1; */
     /* border: solid red; */
-    display: flex;
-    justify-self: center;
-    align-items: center;
+    grid-template-columns: 50% 50%;
+    width: 80vmax;
+    margin: auto;
+    height: 80vh;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-.container #missionlogo img {
-    width: 14vmax;
-}
-
-#mission {
-    grid-area: area2;
-    /* border: solid red; */
-    font-size: 1.3vmax;
-    padding: 2vmax;
-    padding-left: 4vmax;
-    background-color: #F16A36;
-    border: 0.5rem solid #E19A64;
-    border-radius: 3rem;
-    font-family: cursive;
-}
-
-#vision {
-    grid-area: area3;
-    /* border: solid red; */
-    font-size: 1.3vmax;
-    padding: 2vmax;
-    padding-left: 4vmax;
-    background-color: #286181;
-    border: 0.5rem solid #05A1C7;
-    border-radius: 3rem;
-    font-family: cursive;
-}
-
-#visionlogo {
-    grid-area: area4;
-    /* border: solid red; */
-    /* border: solid red; */
-    display: flex;
-    justify-self: center;
-    align-items: center;
-}
-
-#visionlogo img {
-    width: 14vmax;
-}
-
-.box2 h2 {
-    margin-top: 2px;
-    margin-bottom: 5px;
-    font-family: cursive;
-    color: #286181;
-    font-size: 3vmax;
-    margin-left: 2rem;
-}
-
-.box3 h2 {
-    margin-top: 2px;
-    margin-bottom: 5px;
-    font-family: cursive;
-    color: #F16A36;
-    font-size: 3vmax;
-    margin-left: 2rem;
-}
-
-#mission button,
-#vision button {
-    background-color: #F9EE34;
-    padding: 1vw;
-    border-radius: 2vw;
-    border: yellow;
-    font-family: cursive;
-    margin: 1vw;
-    font-size: 1vmax;
-}
-
-@media (max-width: 800px) {
-    .container {
-        /* grid-template-areas:
-
-            'area1',
-            'area2',
-            'area3',
-            'area4'; */
-        display: flex;
-        flex-direction: column;
-    
-    }
-    .box1 img{
-        display: none;
-    }
-    .box4 img{
-        display: none;
-    }
-    .box2,.box3{
-       margin-top: 2rem;
-       margin-bottom: 2rem;
-       /* font-size: 30rem; */
-    }
-    #mission p , #vision p{
-        font-size: 1rem;
-    }
-    #mission button,
-    #vision button
-    {
-        font-size: 0.7rem;
-    }
-}
-
-/* Mission *
-#mission {
-    padding: 2rem;
-    background-color: #286181;
-    border: 0.5rem solid #05A1C7;
-    border-radius: 3rem;
-    font-family: cursive;
-    color: white;
-}
-
-
-#mission button, #vision button {
-    background-color: #F9EE34;
-    padding-right: 1.3rem;
-    padding-left: 1.3rem;
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-    border-radius: 2rem;
-    border: solid #F9EE34;
-    font-family: cursive;
-    font-size: 1rem;
-    margin-top: 1rem;
-    margin-left: 22rem;
-    cursor: pointer;
-}
-
-
-
-#missionlogo,#visionlogo {
+.box1,
+.box4 {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-#missionlogo img, #visionlogo img {
-    /* width: 10rem; *
-    height: 10rem;
+.box1 img,
+.box4 img {
+    width: 180px;
 }
 
-/* vision *
+.box2,
+.box3 {
+    /* border: solid rgb(25, 0, 255); */
+    padding: 1rem;
+    margin: auto;
 
-#vision {
-    padding: 2rem;
+}
+
+.box2 h2, .box3 h2{
+    margin-left: 10px;
+    margin-bottom: 0.6rem;
+    font-weight: 600;
+}
+#mission{
+    padding: 1.7rem;
     background-color: #F16A36;
-    border: 0.5rem solid #E19A64;
-    border-radius: 3rem;
-    font-family: cursive;
+    border: 5px solid #E19A64;
+    border-radius: 1rem;
+    color: white;
+}
+#vision {
+    border: 5px solid #05A1C7;
+    padding: 1.7rem;
+    background-color: #286181;
+    border-radius: 1rem;
     color: white;
 }
 
-.box3 h2 {
-    margin-top: 2px;
-    margin-bottom: 5px;
-    font-family: cursive;
-    color: #286181;
-    font-size: 2rem;
-    margin-left: 2rem;
+.btn{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    padding-right: 1rem ;
+}
+#mission button, #vision button{
+    border: solid #F9EE34;
+    padding: 0.3rem;
+    background-color: #F9EE34;
+    border-radius: 1rem;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
-/* Responsiveness *
-@media (max-width:900px) {
-    .container{
-        grid-template-columns: 40rem;
-        padding: 9rem;
-    }
+@media (max-width: 540px) {
     #mission, #vision{
-        font-size: 1.8rem;
+        width: 280px m !important;
     }
-    #mission button, #vision button{
-        font-size: 1.8rem;
+    .box2, .box4{
+        width: 90%;
     }
-    .box2 h2, .box3 h2{
-        font-size: 3rem;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+}
+@media (max-width: 612px) {
+
+    #mission,
+    #vision {
+        width: 340px !important;
     }
-    #missionlogo img, #visionlogo img {
-        /* width: 10rem; *
-        height: 14rem;
+    .container{
+        width: 100%;
+    }
+    .box2,
+    .box3 {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 }
 
-@media (max-width:600px) {
-    .container{
-        grid-template-columns: 40rem;
-        padding: 1rem;
+@media (max-width: 980px) {
+
+    .box1 img,
+    .box4 img {
+        display: none;
     }
-}*/
+
+    .container {
+        grid-template-columns: 100%;
+    }
+
+    #mission,
+    #vision {
+        width: 450px;
+    }
+}
