--- a/src/Components/Media/Newletter/Newsletter.css
+++ b/src/Components/Media/Newletter/Newsletter.css
@@ -28,9 +28,9 @@
     margin: 1rem;
     margin-bottom: 2rem;
     padding: 1rem;
-    background-color: white;
+    background-color: #fafafa;
     border-radius: 10px;
-    transition: all 0.3s ease-in 0s;
+    transition: all 0.15s ease-in 0s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
@@ -39,31 +39,34 @@
 
 .newsletter_card:hover {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    transform: translateY(-7px);
+    transform: scale(1.01);
 }
 
 .newsletter_card .newsletter_card_image {
-    width: 200px;
-    height: 100%;
+    width: 160px;
+    max-height: 200px;
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .newsletter_card img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
 }
 
 .newsletter_card_content {
     text-align: center;
     font-size: 1rem;
-    margin: 1rem 0;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    height: 100%;
+    max-width: 900px;
     
 }
 
@@ -91,13 +94,12 @@
     font-size: 1rem;
     font-weight: 400;
     text-decoration: none;
-    transition: all 0.3s ease-in 0s;
+    transition: all 0.20s ease-in 0s;
 }
 
 .newsletter_card_content a:hover {
     color: #fff;
-    font-weight: 600;
-    transform: translateY(-3px);
+    transform: translateY(-5px);
 }
 
 @media (max-width: 520px) {
