--- a/src/Components/Members Page/Member.css
+++ b/src/Components/Members Page/Member.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
 * {
   margin: 0;
@@ -6,7 +5,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
 }
 
 body {
@@ -28,16 +26,16 @@ body {
 }
 
 .wrapper .sidebar h2 {
-  color: #fff;
+  color: #ff0000;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
 }
 
 .wrapper .sidebar ul li {
-  text-align: center;
-  padding-left: 0px;
+  text-align: center; 
   padding: 15px;
+  padding-left: 0px;
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   border-top: 1px solid rgba(255, 255, 255, 0.05);
