--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -10,6 +10,10 @@ nav {
     width: 100%;
     z-index: 999;
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.4s ease 0s;
 }
 
 .nav_space {
