--- a/src/Components/Members/Member.css
+++ b/src/Components/Members/Member.css
@@ -26,7 +26,7 @@ body {
 }
 
 .wrapper .sidebar h2 {
-  color: #ff0000;
+  color: #ffffff;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
@@ -35,10 +35,13 @@ body {
 .wrapper .sidebar ul li {
   text-align: center; 
   padding: 15px;
-  padding-left: 0px;
+  
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+.wrapper .sidebar ul li {
+  padding-left: 0px !important;
 }
 
 .wrapper .sidebar ul li a {
